admin controllers updated

--- a/PCHUBStore/Areas/Administration/Views/Blacksmith/EditUserCategoryPage.cshtml
+++ b/PCHUBStore/Areas/Administration/Views/Blacksmith/EditUserCategoryPage.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
 
-    ViewData["Title"] = "Edit User Index Page ";
+    ViewData["Title"] = "Edit User Category Page ";
 
 }
 
 
 <div class="container bg-gradient-primary" style="background-color: black; margin-top: 3em">
 
-    <h1 class="text-center" style="color: white">Edit User Index Page</h1>
+    <h1 class="text-center" style="color: white">Edit User Category Page</h1>
 
 </div>
 
@@ -26,25 +26,13 @@
             <a href="" style="color: white">Add Box</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Review Index Categories</a>
+            <a href="" style="color: white">Add Category</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Add Index Category</a>
+            <a href="" style="color: white">Delete Category</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Delete Index Category</a>
-        </div>
-        <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Edit Index Category</a>
-        </div>
-        <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Upload Main Slider Pictures</a>
-        </div>
-        <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Review Main Slider Pictures</a>
-        </div>
-        <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Delete Main Slider Picture</a>
+            <a href="" style="color: white">Edit Category</a>
         </div>
     </div>
 </div>
