--- a/PCHUBStore/Areas/Administration/Views/Blacksmith/Index.cshtml
+++ b/PCHUBStore/Areas/Administration/Views/Blacksmith/Index.cshtml
@@ -1,4 +1,10 @@
 ﻿
+@{
+
+    ViewData["Title"] = "Blacksmith Panel ";
+
+}
+
 <div class="container bg-gradient-primary" style="background-color: black; margin-top: 3em">
 
     <h1 class="text-center" style="color: white">Blacksmith Panel</h1>
@@ -11,4 +17,4 @@
     <img src="~/img/blacksmithSide.jpg" style="width: 20em; height: 15em" alt="Alternate Text" />
 </div>
 
-<partial name="~/Areas/Administration/Views/Partials/_IndexPartial.cshtml"/>
+<partial name="~/Areas/Administration/Views/Partials/_IndexPartial.cshtml" />
