--- a/PCHUBStore/Areas/Administration/Views/Products/CreateProduct.cshtml
+++ b/PCHUBStore/Areas/Administration/Views/Products/CreateProduct.cshtml
@@ -68,7 +68,10 @@
             <span asp-validation-for="Pictures" class="text-danger"></span>
         </div>
         <h1 style="color: black" class="text-center">Characteristics</h1>
-        <button class="btn btn-danger" value="Laptops">Apply Characteristics From Laptops</button>
+        @foreach (var cat in Model.CategoryPattern)
+        {
+            <button class="btn btn-danger applyCharacteristics" type="button" value="@cat">Apply Characteristics From @cat</button>
+        }
         <h1 class="text-center">Basic Characteristics</h1>
         @for (int i = 0; i < Model.BasicCharacteristics.Count; i++)
         {
@@ -97,3 +100,10 @@
         <button type="submit" class="btn btn-primary">Craft Product</button>
     </form>
 </div>
+
+
+
+
+@section Scripts {
+    <script type="text/javascript" src="~/js/adminCreateProduct.js"></script>
+}
