--- a/PCHUBStore/Views/Products/Products.cshtml
+++ b/PCHUBStore/Views/Products/Products.cshtml
@@ -17,7 +17,7 @@
     <div class="col-2"></div>
     <div class="col-10">
         <p style="color: black">
-            Here you can review all of the laptops that are available on our website. By applying the filters you would be able to select the best choice for you. We combine both quality and low prices.
+            Here you can review all of the @Model.Category that are available on our website. By applying the filters you would be able to select the best choice for you. We combine both quality and low prices.
         </p>
     </div>
 </div>
