admin edit index page

--- a/PCHUBStore/Areas/Administration/Views/Blacksmith/EditUserIndexPage.cshtml
+++ b/PCHUBStore/Areas/Administration/Views/Blacksmith/EditUserIndexPage.cshtml
@@ -14,37 +14,28 @@
 <div class="container text-center" style="margin-top: 3em">
     <div class="row" style="font-size: 25px">
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Review Boxes</a>
+            <a asp-controller="IndexPage" asp-area="Administration" asp-action="CreateIndexPage" style="color: white">Create Index Page</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Delete Box</a>
+            <a asp-controller="IndexPage" asp-action="AddPageCategory" asp-area="Administration" style="color: white">Add Index Category</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Edit Box</a>
+            <a asp-controller="IndexPage" asp-action="AddItemsCategory" asp-area="Administration" style="color: white">Add Items Category</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Add Box</a>
+            <a asp-controller="IndexPage" asp-action="EditIndexCategory" asp-area="Administration" style="color: white">Edit Index Category</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Review Index Categories</a>
+            <a asp-controller="IndexPage" asp-action="AddBox" asp-area="Administration" style="color: white">Add Box</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Add Index Category</a>
+            <a asp-controller="IndexPage" asp-action="EditBoxes" asp-area="Administration" style="color: white">Edit Boxes</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Delete Index Category</a>
+            <a asp-controller="IndexPage" asp-action="UploadMainSliderPictures" asp-area="Administration" style="color: white">Upload Main Slider Pictures</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Edit Index Category</a>
-        </div>
-        <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Upload Main Slider Pictures</a>
-        </div>
-        <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Review Main Slider Pictures</a>
-        </div>
-        <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Delete Main Slider Picture</a>
+            <a asp-controller="IndexPage" asp-action="EditMainSliderPictures" asp-area="Administration" style="color: white">Edit Main Slider Pictures</a>
         </div>
     </div>
 </div>
