--- a/PCHUBStore/Areas/Administration/Views/Partials/_IndexPartial.cshtml
+++ b/PCHUBStore/Areas/Administration/Views/Partials/_IndexPartial.cshtml
@@ -38,6 +38,9 @@
             <div class="col-3 border-left bg-gradient-primary">
                 <a asp-area="Administration" asp-controller="Characteristics" asp-action="CreateCategory" style="color: white">Create Characteristics Category</a>
             </div>
+            <div class="col-3 border-left bg-gradient-primary">
+                <a asp-area="Administration" asp-controller="Filters" asp-action="UpdateFilterCategory" style="color: white">Update Filters Category</a>
+            </div>
         </div>
     </div>
 </div>
