--- a/PCHUBStore/Views/Partial/Products/ProductFiltersPartial.cshtml
+++ b/PCHUBStore/Views/Partial/Products/ProductFiltersPartial.cshtml
@@ -1,115 +1,145 @@
 ﻿@model PCHUBStore.View.Models.ProductsViewModel
 
-<form action="/Products/@Model.Category" class="productsViewStyle" style="border-style: solid; background-color: white; border-color:white" method="get">
-    <div class="container text-center border-bottom-info" style="background-color: #f6f6f6">
-        <img src="~/img/icons8-filter-64.png" alt="Filters" />
-    </div>
+    <form action="/Products/@Model.Category" class="productsViewStyle" style="border-style: solid; background-color: white; border-color:white" method="get">
+        <div class="container text-center border-bottom-info" style="background-color: #f6f6f6">
+            <img src="~/img/icons8-filter-64.png" alt="Filters" />
+        </div>
 
 
-    <div class="container border-bottom-danger" style="margin-top: 20px">
-        <label for="OrderBy" style="font-family: sans-serif; color: black; font-size: 20px">Order By</label>
-        <select onchange="changeHandler()" name="OrderBy" class="form-control" style="margin-bottom: 20px">
+        <div class="container border-bottom-danger" style="margin-top: 20px">
+            <label for="OrderBy" style="font-family: sans-serif; color: black; font-size: 20px">Order By</label>
+            <select onchange="changeHandler()" name="OrderBy" class="form-control" style="margin-bottom: 20px">
 
-            @foreach (var orderByCategory in Model.FilterCategory.Where(x => x.ViewSubCategoryName == "Order By"))
-            {
-                @foreach (var filter in orderByCategory.Filters)
+                @foreach (var orderByCategory in Model.FilterCategory.Where(x => x.ViewSubCategoryName == "Order By"))
                 {
-                    @if (filter.IsChecked)
+                    @foreach (var filter in orderByCategory.Filters)
                     {
-                        <option value="@filter.Value" selected>@filter.Name</option>
+                        @if (filter.IsChecked)
+                        {
+                            <option value="@filter.Value" selected>@filter.Name</option>
+                        }
+                        else
+                        {
+                            <option value="@filter.Value">@filter.Name</option>
+                        }
+                    }
+                }
+            </select>
+        </div>
+
+
+        <div class="container border-bottom-danger text-center" style="margin-top: 20px">
+            <a href="/Products/@Model.Category" style="color: cadetblue; font-size: 2em">Remove All Filters</a>
+           
+        </div>
+
+        <div class="container border-bottom-danger text-center" style="margin-top: 20px;">
+            <div class="col-12 text-center" style="margin-bottom: 10px">
+                <p class="border-bottom-success" style="font-family: sans-serif; color: black; font-size: 20px">Price</p>
+            </div>
+
+            @if (Model.FilterCategory.Any(x => x.ViewSubCategoryName == "Price"))
+            {
+                var priceCategory = Model.FilterCategory.FirstOrDefault(x => x.ViewSubCategoryName == "Price");
+                var minPrice = priceCategory.Filters.FirstOrDefault(x => x.Name == "MinPrice");
+                var maxPrice = priceCategory.Filters.FirstOrDefault(x => x.Name == "MaxPrice");
+
+                <div class="col-12" style="margin-bottom: 20px">
+                    <label for="MinPrice">Minimum Price</label>
+                    <input type="number" style="width: inherit" name="MinPrice" value="@minPrice.Value" />
+                </div>
+                <div class="col-12" style="margin-bottom: 20px">
+                    <label for="MaxPrice">Maximum Price</label>
+                    <input type="number" style="width: inherit" name="MaxPrice" value="@maxPrice.Value" />
+                </div>
+            }
+            else
+            {
+                <div class="col-12" style="margin-bottom: 20px">
+                    <label for="MinPrice">Minimum Price</label>
+                    <input type="number" style="width: inherit" name="MinPrice" value="400" />
+                </div>
+                <div class="col-12" style="margin-bottom: 20px">
+                    <label for="MaxPrice">Maximum Price</label>
+                    <input type="number" style="width: inherit" name="MaxPrice" value="10000" />
+                </div>
+            }
+
+
+
+        </div>
+        <div class="row" style="margin-top: 20px">
+
+
+            @foreach (var category in Model.FilterCategory.Where(x => x.ViewSubCategoryName != "Order By" && x.ViewSubCategoryName != "Price").ToList())
+            {
+                <div class="col-12 text-center" style="margin-bottom: 10px">
+                    <p class="border-bottom-success" style="font-family: sans-serif; color: black; font-size: 20px">@category.ViewSubCategoryName</p>
+                </div>
+
+
+                @for (int i = 0; i < category.Filters.ToList().Count; i++)
+                {
+
+
+                    if (category.Filters.ToList()[i].IsChecked)
+                    {
+                        <div class="col-12">
+                            <div class="form-row">
+                                <input onchange="changeHandler()" type="checkbox" class="col-sm-1" name="@category.Filters.ToList()[i].Name" id="name" value="@category.Filters.ToList()[i].Value" checked />
+                                <label class="col-sm-11" for="@category.Filters.ToList()[i].Name">@category.Filters.ToList()[i].Value</label>
+                            </div>
+                        </div>
                     }
                     else
                     {
-                        <option value="@filter.Value">@filter.Name</option>
+                        if (i > 5)
+                        {
+                            <div class="col-12">
+                                <div style="display: none" class="form-row @category.ViewSubCategoryName">
+                                    <input onchange="changeHandler()" type="checkbox" class="col-sm-1" name="@category.Filters.ToList()[i].Name" id="name" value="@category.Filters.ToList()[i].Value" />
+                                    <label class="col-sm-11" for="@category.Filters.ToList()[i].Name">@category.Filters.ToList()[i].Value</label>
+                                </div>
+                            </div>
+                            if (i == category.Filters.ToList().Count - 1)
+                            {
+
+                                <div class="col-12 text-center">
+                                    <p type="button" style="font-size: 10px" class="alert-danger expandable">Expand @category.ViewSubCategoryName</p>
+                                </div>
+                            }
+                        }
+                        else
+                        {
+                            <div class="col-12 align-items-center">
+                                <div class="form-row">
+                                    <input onchange="changeHandler()" type="checkbox" class="col-sm-1" name="@category.Filters.ToList()[i].Name" id="name" value="@category.Filters.ToList()[i].Value" />
+                                    <label class="col-sm-11" for="@category.Filters.ToList()[i].Name">@category.Filters.ToList()[i].Value</label>
+                                </div>
+                            </div>
+                        }
                     }
                 }
-            }
-        </select>
-    </div>
 
-    <div class="container border-bottom-danger text-center" style="margin-top: 20px;">
-        <div class="col-12 text-center" style="margin-bottom: 10px">
-            <p class="border-bottom-success" style="font-family: sans-serif; color: black; font-size: 20px">Price</p>
+
+            }
+
+            <script>
+                function changeHandler() {
+                    document.getElementById('btn').click();
+                }
+            </script>
+
+        </div>
+        <div class="row" style="visibility: hidden">
+
+            <div class="col-12">
+                <label for="Page">Page</label>
+                <input id="page" checked type="checkbox" name="Page" value="1" />
+            </div>
+
+            <button id="btn" type="submit">Click Me</button>
         </div>
 
-        @if (Model.FilterCategory.Any(x => x.ViewSubCategoryName == "Price"))
-        {
-            var priceCategory = Model.FilterCategory.FirstOrDefault(x => x.ViewSubCategoryName == "Price");
-            var minPrice = priceCategory.Filters.FirstOrDefault(x => x.Name == "MinPrice");
-            var maxPrice = priceCategory.Filters.FirstOrDefault(x => x.Name == "MaxPrice");
 
-            <div class="col-12" style="margin-bottom: 20px">
-                <label for="MinPrice">Minimum Price</label>
-                <input type="number" style="width: inherit" name="MinPrice" value="@minPrice.Value" />
-            </div>
-            <div class="col-12" style="margin-bottom: 20px">
-                <label for="MaxPrice">Maximum Price</label>
-                <input type="number" style="width: inherit" name="MaxPrice" value="@maxPrice.Value" />
-            </div>
-        }
-        else
-        {
-            <div class="col-12" style="margin-bottom: 20px">
-                <label for="MinPrice">Minimum Price</label>
-                <input type="number" style="width: inherit" name="MinPrice" value="400" />
-            </div>
-            <div class="col-12" style="margin-bottom: 20px">
-                <label for="MaxPrice">Maximum Price</label>
-                <input type="number" style="width: inherit" name="MaxPrice" value="10000" />
-            </div>
-        }
-
-
-
-    </div>
-    <div class="row" style="margin-top: 20px">
-
-        @foreach (var category in Model.FilterCategory.Where(x => x.ViewSubCategoryName != "Order By" && x.ViewSubCategoryName != "Price").ToList())
-        {
-            <div class="col-12 text-center" style="margin-bottom: 10px">
-                <p class="border-bottom-success" style="font-family: sans-serif; color: black; font-size: 20px">@category.ViewSubCategoryName</p>
-            </div>
-
-
-            @foreach (var filter in category.Filters)
-            {
-                if (filter.IsChecked)
-                {
-                    <div class="col-12">
-                        <label for="@filter.Name">@filter.Value</label>
-                        <input onchange="changeHandler()" type="checkbox" checked name="@filter.Name" value="@filter.Value" />
-                    </div>
-                }
-                else
-                {
-                    <div class="col-12">
-                        <label for="@filter.Name">@filter.Value</label>
-                        <input onchange="changeHandler()" type="checkbox" name="@filter.Name" value="@filter.Value" />
-                    </div>
-                }
-
-
-            }
-
-
-        }
-
-        <script>
-            function changeHandler() {
-                document.getElementById('btn').click();
-            }
-        </script>
-
-    </div>
-    <div class="row" style="visibility: hidden">
-
-        <div class="col-12">
-            <label for="Page">Page</label>
-            <input id="page" checked type="checkbox" name="Page" value="1" />
-        </div>
-
-        <button id="btn" type="submit">Click Me</button>
-    </div>
-
-
-</form>
+    </form>
