--- a/PCHUBStore/Views/Shared/_Layout.cshtml
+++ b/PCHUBStore/Views/Shared/_Layout.cshtml
@@ -5,16 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - PCHUB.WEB</title>
     <link rel="icon" type="image/jpg" sizes="16x16" href="~/lightning.png">
-    <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
-              crossorigin="anonymous"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
-    </environment>
     <link rel="stylesheet" href="~/css/site.css" />
 
     <link href="~/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -91,6 +81,20 @@
     <!-- Footer -->
     <footer class="page-footer font-small unique-color-dark">
 
+        <div class="container bg-white">
+            <div class="row">
+                <div class="col-6">
+                    <img src="~/img/tools-solid.svg" style="width: 3em; height: 3em" alt="Alternate Text" />
+                    <p>
+                        Специализираният компютърен сервиз във София на PC HUB Superstore ще откриете на адрес Люлин 3 бл. 261dsaВ / Бул. Андрей Адсасд, Телефон: +309 2 234 2323
+                    </p>
+                </div>
+                <div class="col-6">
+                    <img src="~/img/store-solid.svg" style="width: 3em; height: 3em" alt="Alternate Text" />
+                    <p>Магазин за компютри и лаптопи София, Люлин 2 Блок 21261В , Телефон: +3539 325 0808</p>
+                </div>
+            </div>
+        </div>
         <div style="background-color: #6351ce;">
             <div class="container">
 
@@ -236,24 +240,6 @@
     </footer>
     <!-- Footer -->
 
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
-        </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o">
-        </script>
-    </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     <script src="~/vendor/jquery/jquery.min.js"></script>
