--- a/PCHUBStore/Views/Partial/Products/ProductsPartial.cshtml
+++ b/PCHUBStore/Views/Partial/Products/ProductsPartial.cshtml
@@ -30,7 +30,14 @@
             <div class="container" style="visibility: hidden">
                 <div class="row">
                     <img src="~/img/shoppingCart.png" style="width: 50px; height: 50px;" alt="Alternate Text" />
-                    <button class="btn btn-success">Add To Cart</button>
+                    @if (this.User.Identity.IsAuthenticated)
+                    {
+                        <a class="btn btn-info" role="button" asp-controller="ShoppingCart" asp-action="BuyProduct">Add To Cart</a>
+                    }
+                    else
+                    {
+                        <a class="btn btn-info" role="button" asp-controller="ShoppingCart" asp-action="BuyProductAnonymous">Add To Cart</a>
+                    }
                 </div>
 
             </div>
