--- a/PCHUBStore/Views/Shared/_Layout.cshtml
+++ b/PCHUBStore/Views/Shared/_Layout.cshtml
@@ -36,10 +36,13 @@
             </div>
             <!-- Shopping Cart -->
             <div style="height:60px;" class="col-sm-6 col-lg-2">
-                <a style="display: inline-block" class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="~/img/shoppingCart.png" style="width: 50px; height: 50px; z-index: 1" alt="Alternate Text" />
-                    <span style="background-color:#152b53; color:#fff; padding:4px; font-weight:bold;">7</span>
-                </a>
+                @if (this.User.IsInRole("StoreUser"))
+                {
+                    <a style="display: inline-block" class="nav-link text-white"  asp-controller="ShoppingCart" asp-action="ReviewShoppingCart">
+                        <img src="~/img/shoppingCart.png" style="width: 50px; height: 50px; z-index: 1" alt="Alternate Text" />
+                        <span style="background-color:#152b53; color:#fff; padding:4px; font-weight:bold;">7</span>
+                    </a>
+                }
             </div>
             <!-- Chat -->
             <div style="height:60px;" class="col-sm-6 col-lg-2">
