--- a/PCHUBStore/Views/Products/Product.cshtml
+++ b/PCHUBStore/Views/Products/Product.cshtml
@@ -46,7 +46,7 @@
 
                     @if (this.User.Identity.IsAuthenticated)
                     {
-                        <a class="btn btn-info" role="button" asp-controller="ShoppingCart" asp-action="ReviewCart">Add To Cart</a>
+                        <a class="btn btn-info" role="button" asp-controller="ShoppingCart" asp-action="BuyProduct" asp-route-id="@Model.Id">Add To Cart</a>
                     }
                     else
                     {
