--- a/PCHUBStore/Views/Shared/_Layout.cshtml
+++ b/PCHUBStore/Views/Shared/_Layout.cshtml
@@ -36,11 +36,18 @@
             </div>
             <!-- Shopping Cart -->
             <div style="height:60px;" class="col-sm-6 col-lg-2">
-                @if (this.User.IsInRole("StoreUser"))
+                @if (this.User.Identity.IsAuthenticated)
                 {
-                    <a style="display: inline-block" class="nav-link text-white"  asp-controller="ShoppingCart" asp-action="ReviewShoppingCart">
+                    <a style="display: inline-block" class="nav-link text-white" asp-controller="ShoppingCart" asp-action="ReviewCart">
                         <img src="~/img/shoppingCart.png" style="width: 50px; height: 50px; z-index: 1" alt="Alternate Text" />
-                        <span style="background-color:#152b53; color:#fff; padding:4px; font-weight:bold;">7</span>
+                        <span id="cartNumberOfProducts" style="background-color:#152b53; color:#fff; padding:4px; font-weight:bold;">7</span>
+                    </a>
+                }
+                else
+                {
+                    <a style="display: inline-block" class="nav-link text-white" asp-controller="ShoppingCart" asp-action="ReviewCartAnonymous">
+                        <img src="~/img/shoppingCart.png" style="width: 50px; height: 50px; z-index: 1" alt="Alternate Text" />
+                        <span id="cartNumberOfProducts" style="background-color:#152b53; color:#fff; padding:4px; font-weight:bold;">7</span>
                     </a>
                 }
             </div>
@@ -264,7 +271,6 @@
     {
         <script src="~/js/productsHistory.js"></script>
     }
-    <script src="~/js/index.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
