shopping cart controller updates cart views updates craft category page Admin updates

--- a/PCHUBStore/Areas/Administration/Views/Blacksmith/EditUserCategoryPage.cshtml
+++ b/PCHUBStore/Areas/Administration/Views/Blacksmith/EditUserCategoryPage.cshtml
@@ -14,22 +14,19 @@
 <div class="container text-center" style="margin-top: 3em">
     <div class="row" style="font-size: 25px">
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Review Boxes</a>
-        </div>
-        <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Delete Box</a>
+            <a href="" style="color: white">Add Box</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
             <a href="" style="color: white">Edit Box</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Add Box</a>
-        </div>
-        <div class="col-2 m-1 bg-gradient-primary">
             <a href="" style="color: white">Add Category</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Delete Category</a>
+            <a href="" style="color: white">Add Items Category</a>
+        </div>
+        <div class="col-2 m-1 bg-gradient-primary">
+            <a href="" style="color: white">Create Category Page</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
             <a href="" style="color: white">Edit Category</a>
