--- a/PCHUBStore/Views/Shared/_Layout.cshtml
+++ b/PCHUBStore/Views/Shared/_Layout.cshtml
@@ -69,6 +69,7 @@
     <!-- Navigation -->
 
     <div>
+        <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
