--- a/PCHUBStore/Views/Home/Privacy.cshtml
+++ b/PCHUBStore/Views/Home/Privacy.cshtml
@@ -1,6 +1,36 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div class="container" style="color: black">
+    <div class="row">
+        <div class="col-12">
+            <h1>Generic Terms of Service Template</h1>
+            <p>Please read these terms of service ("terms", "terms of service") carefully before using [website] website (the "service") operated by [name] ("us", 'we", "our").</p>
+        </div>
+        <div class="col-12">
+            <h1>Conditions of Use</h1>
+            <p>We will provide their services to you, which are subject to the conditions stated below in this document. Every time you visit this website, use its services or make a purchase, you accept the following conditions. This is why we urge you to read them carefully.</p>
+        </div>
+        <div class="col-12">
+            <h1>Privacy Policy</h1>
+            <p>Before you continue using our website we advise you to read our privacy policy [link to privacy policy] regarding our user data collection. It will help you better understand our practices.</p>
+        </div>
+        <div class="col-12">
+            <h1></h1>
+            <p></p>
+        </div>
+        <div class="col-12">
+            <h1>Copyright</h1>
+            <p>Content published on this website (digital downloads, images, texts, graphics, logos) is the property of [name] and/or its content creators and protected by international copyright laws. The entire compilation of the content found on this website is the exclusive property of [name], with copyright authorship for this compilation by [name].</p>
+        </div>
+        <div class="col-12">
+            <h1>User Account</h1>
+            <p>
+                If you are an owner of an account on this website, you are solely responsible for maintaining the confidentiality of your private user details (username and password). You are responsible for all activities that occur under your account or password.
+
+                We reserve all rights to terminate accounts, edit or remove content and cancel orders in their sole discretion.
+            </p>
+        </div>
+    </div>
+</div>
