--- a/PCHUBStore/Views/Partial/Products/ProductsPartial.cshtml
+++ b/PCHUBStore/Views/Partial/Products/ProductsPartial.cshtml
@@ -36,7 +36,7 @@
                     }
                     else
                     {
-                        <a class="btn btn-info" role="button" asp-controller="ShoppingCart" asp-action="BuyProductAnonymous">Add To Cart</a>
+                        <a class="btn btn-info" role="button" asp-controller="ShoppingCart" asp-action="BuyProductAnonymous" asp-route-id="@product.Id">Add To Cart</a>
                     }
                 </div>
 
