--- a/PCHUBStore/Views/_ViewImports.cshtml
+++ b/PCHUBStore/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using PCHUBStore
 @using PCHUBStore.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AspNetCoreTemplate.Web
